Fill parameter defaults and add querystrings
